// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryItemDetail when hovering renders a hovered category item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="category-item-detail"
  style="padding: 5px 10px 5px 10px; width: 188px;"
>
  <div
    aria-hidden="true"
    class="css-text-76zvg2 css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(250, 249, 250); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    Fortnite
  </div>
  <div
    class="css-text-76zvg2 css-textOneLine-bfa6kz"
    dir="auto"
    style="color: rgb(218, 216, 222); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
  >
    {{count, number}} viewer
  </div>
</div>
`;

exports[`CategoryItemDetail when not hovering renders a category item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="category-item-detail"
  style="padding: 5px 10px 5px 10px; width: 188px;"
>
  <div
    aria-hidden="true"
    class="css-text-76zvg2 css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(25, 23, 28); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    Fortnite
  </div>
  <div
    class="css-text-76zvg2 css-textOneLine-bfa6kz"
    dir="auto"
    style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
  >
    {{count, number}} viewer
  </div>
</div>
`;
